2001-09-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclExecute.c (TclExecuteByteCode): fixed invalid usage
	of valuePtr in TRACE_WITH_OBJ in INST_EVAL_STK case. [Bug #462594]
	Changed INST_STR_CMP instruction to promote to Unicode strings
	only when one of the strings is already of Unicode type.

	* generic/tclExecute.c (TclExecuteByteCode):
	* generic/tclCompile.c (instructionTable):
	* generic/tclCompCmds.c (TclCompileStringCmd): INST_STR_MATCH -
	Updated to Int1 instruction type and added special case to use
	INST_STR_EQ instead when no glob chars are specified in a static
	string.

	* tests/{for.test,foreach.test,if.test,while.test}:
	* generic/tclCompCmds.c (TclCompileForCmd, TclCompileForeachCmd,
	TclCompileIfCmd, TclCompileWhileCmd): Corrected the overaggressive
	compiling of loop bodies enclosed in ""s.  [Bug #219166] (msofer)

2001-09-19  Miguel Sofer  <msofer@users.sourceforge.net>
	
	* generic/tclExecute.c: insured that execution stack errors are
	also detected at abnormal returns.

2001-09-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/socket.n: Added documentation to mention what happens when a
	server socket is created with port=0.  Removed an old change bar,
	and no new change bar because Tcl has always behaved this way as
	it is really a poorly-documented standards-defined OS feature.

	* tests/util.test (util-8.1): Test derived from code to detect the
	problem, but the test always works in the C locale, so beware if
	you are maintaining the code.
	* generic/tclUtil.c (TclNeedSpace): Rewrote to be UTF-8 aware.
	[Bug 411825, but not that patch which would have added extra
	spaces if there was a real non-ASCII space involved. ]

2001-09-18 Andreas Kupries  <andreas_kupries@users.sourceforge.net> 

	* generic/tclIOCmd.c (Tcl_PutsObjCmd): Rewritten to have saner and
	  faster argument handling.  Fixes bug #123552. Patch provided by
	  Donal K. Fellows <fellowsd@cs.man.ac.uk>: #402564.

2001-09-18  Don Porter  <dgp@users.sourceforge.net>
